# rusty-detox

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
completions/: _rusty-detox  rusty-detox.bash  rusty-detox.fish  rusty-detox.ps1
docs/: COMPATIBILITY.md  DESIGN.md  ci-runtime-baseline.md  feature-layout.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  mode.rs  output.rs  planner.rs  renamer.rs  sequence.rs  strict.rs  tables.rs  walker.rs
src/filter/: iso8859_1.rs  max_length.rs  mod.rs  safe.rs  safe_platform.rs  uncgi.rs  utf8.rs  wipeup.rs
tests/: compat_default.rs  compat_strict.rs  completions_drift.rs  inline_detox.rs  lib_api.rs  safe_platform.rs  walker_recursion.rs
tests/common/: mod.rs
tests/snapshots/upstream_v3_0_1/: PROVENANCE.txt
