[package]
name = "rusty-detox"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["James Han <jsh562@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
description = "Sanitize messy filenames — a Rust port of Doug Harple's `detox(1)` with the filter pipeline (uncgi, iso8859_1, utf_8, safe, wipeup, max_length), `detoxrc` config grammar, recursive collision-safe batch rename, EXDEV cross-device fallback, and a typed library API."
repository = "https://github.com/jsh562/rusty-detox"
homepage = "https://github.com/jsh562/rusty-detox"
documentation = "https://docs.rs/rusty-detox"
readme = "README.md"
keywords = ["detox", "filename", "sanitize", "rename", "cli"]
categories = ["command-line-utilities", "filesystem"]
default-run = "rusty-detox"

[features]
default = ["cli"]
# `cli` gates the CLI-only dependencies so library consumers can depend on
# rusty-detox with `default-features = false` without pulling in clap/walkdir/etc.
cli = ["dep:clap", "dep:clap_complete", "dep:anyhow", "dep:terminal_size", "dep:walkdir"]
# `inline-detox` adds the upstream-canonical companion binary that reads stdin,
# sanitizes the byte stream as a name, and writes to stdout.
inline-detox = ["cli"]

[dependencies]
thiserror = "2"
# CLI-only deps gated behind the `cli` feature.
clap = { version = "4", features = ["derive", "env"], optional = true }
clap_complete = { version = "4", optional = true }
anyhow = { version = "1", optional = true }
terminal_size = { version = "0.4", optional = true }
walkdir = { version = "2", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
static_assertions = "1"

[[bin]]
name = "rusty-detox"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "inline-detox"
path = "src/bin/inline_detox.rs"
required-features = ["inline-detox"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
