[package]
name = "rusty-detox"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["James Han <jsh562@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
description = "Sanitize messy filenames — a Rust port of Doug Harple's `detox(1)` with the filter pipeline (uncgi, iso8859_1, utf_8, safe, wipeup, max_length), `detoxrc` config grammar, recursive collision-safe batch rename, EXDEV cross-device fallback, and a typed library API."
repository = "https://github.com/jsh562/rusty-detox"
homepage = "https://github.com/jsh562/rusty-detox"
documentation = "https://docs.rs/rusty-detox"
readme = "README.md"
keywords = ["detox", "filename", "sanitize", "rename", "cli"]
categories = ["command-line-utilities", "filesystem"]
default-run = "rusty-detox"

# -----------------------------------------------------------------------------
# [features] — v0.2.0 portfolio-wide Cargo Features Convention layout.
#
# Convention authority:
#   * specs/adrs/0006-cargo-features-convention-for-portfolio-ports.md (why)
#   * project-instructions.md §Cargo Feature Surface (what)
#
# rusty-detox is a single-capability port per spec 00011 §Scope Edge Cases:
# the documented capability is "sanitize messy filenames through a configurable
# filter pipeline (a Rust port of Doug Harple's detox(1) v3.0.1)". Per the
# minimum-convention rule, ZERO new leaves are carved beyond the required
# umbrellas. See docs/feature-layout.md for the explicit carving rationale.
#
# v0.2.0 is a PURELY ADDITIVE release. Every v0.1.x feature name and
# composition is preserved verbatim; the new umbrellas (`full`,
# `detox-classic`, `detox-minimal`) layer on top without renaming or
# narrowing existing features. No SemVer break.
#
# Required umbrellas (FR-001..FR-004):
#   default        — alias for `full`; kitchen-sink for casual `cargo install`
#   full           — every leaf (degenerates to `cli` in this single-cap port)
#   cli            — CLI-only deps + modules (library consumers strip)
#   detox-classic  — bare port, drop-in match for upstream detox 3.0.1
#
# Required preset bundles (FR-007 — 2 per port even for single-cap):
#   detox-classic  — detox 3.0.1 drop-in replacement (aliased above)
#   detox-minimal  — explicit minimal-CLI semantic alias (same composition)
#
# Retained v0.1.x features (additive — names + compositions preserved verbatim):
#   cli            — unchanged: clap + clap_complete + anyhow + terminal_size + walkdir
#   inline-detox   — unchanged: adds a second `inline-detox` binary entry
#
# No leaf features carved — see docs/feature-layout.md §Leaves intentionally
# NOT carved for the explicit per-capability rejection rationale.
# -----------------------------------------------------------------------------

[features]
default = ["full"]

# Umbrella: every leaf enabled. Kitchen sink for `cargo install` casual users.
# In rusty-detox (single-capability port) `full` resolves to `cli` alone —
# preserving identical resolution to the v0.1.x `default = ["cli"]` so no
# observable change for any consumer.
full = ["cli"]

# `cli` gates the CLI-only dependencies so library consumers can depend on
# rusty-detox with `default-features = false` without pulling in clap/walkdir/etc.
# Composition preserved verbatim from v0.1.x.
cli = ["dep:clap", "dep:clap_complete", "dep:anyhow", "dep:terminal_size", "dep:walkdir"]

# Umbrella: bare port, drop-in match for upstream detox 3.0.1. Pulls the CLI
# surface; the bare upstream detox set is reproduced via `--strict`,
# `RUSTY_DETOX_STRICT` env var, or `detox` / `detox-alias` argv[0] auto-detect
# (no extra feature flag required).
detox-classic = ["cli"]

# Preset bundle: explicit minimal-CLI alias. Same composition as
# detox-classic (single-capability port has no smaller subset to carve).
# Provided as a semantic alias mirroring the `<port>-minimal` naming
# convention used by other portfolio ports (figlet-minimal, ts-minimal,
# sponge-minimal, vipe-minimal, pee-minimal, pwgen-minimal).
detox-minimal = ["cli"]

# `inline-detox` adds the upstream-canonical companion binary that reads stdin,
# sanitizes the byte stream as a name, and writes to stdout. v0.1.x feature
# retained verbatim per the v0.2.0 SemVer additive contract. NOT a convention
# preset bundle — it is an installation-time convenience knob.
inline-detox = ["cli"]

[dependencies]
thiserror = "2"
# CLI-only deps gated behind the `cli` feature.
clap = { version = "4", features = ["derive", "env"], optional = true }
clap_complete = { version = "4", optional = true }
anyhow = { version = "1", optional = true }
terminal_size = { version = "0.4", optional = true }
walkdir = { version = "2", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
static_assertions = "1"

[[bin]]
name = "rusty-detox"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "inline-detox"
path = "src/bin/inline_detox.rs"
required-features = ["inline-detox"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
